manifests/php_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  labels:
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: smusevmikhail/php2:latest
