manifests/php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php
spec:
  selector:
    app: php
  ports:
  - protocol: TCP
    port: 80
